--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -5,93 +5,89 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical">
-    <com.github.mikephil.charting.charts.LineChart
+    <LinearLayout
         android:layout_marginTop="10dp"
-        android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:columnCount="2"
-        android:paddingStart="40dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:ignore="RtlSymmetry">
+        android:baselineAligned="false">
         <LinearLayout
             style="@style/record_params"
-            android:layout_width="130dp">
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp">
             <TextView
-                android:text="@string/db_name"
-                style="@style/record_params.label"/>
+                android:id="@+id/display"
+                style="@style/record_params.label" />
+        </LinearLayout>
+        <LinearLayout
+            style="@style/record_params"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp">
             <TextView
                 android:id="@+id/dB"
                 style="@style/record_params.label"
-                android:layout_width="45dp" />
+                android:layout_width="42dp" />
             <TextView
                 android:text="@string/db"
                 style="@style/record_params.label"/>
         </LinearLayout>
         <LinearLayout
             style="@style/record_params"
-            android:layout_width="170dp">
-            <TextView
-                android:text="@string/freq_name"
-                style="@style/record_params.label"/>
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp">
             <TextView
                 android:id="@+id/freq"
                 style="@style/record_params.label"
-                android:layout_width="45dp" />
+                android:layout_width="42dp" />
             <TextView
                 android:text="@string/khz"
                 style="@style/record_params.label"/>
         </LinearLayout>
         <LinearLayout
             style="@style/record_params"
-            android:layout_columnSpan="2"
-            android:layout_width="wrap_content">
-            <TextView
-                android:text="@string/amplitude_name"
-                style="@style/record_params.label"/>
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp">
             <TextView
                 android:id="@+id/amplitude"
                 style="@style/record_params.label"
                 android:layout_width="80dp"/>
         </LinearLayout>
-    </GridLayout>
-    <LinearLayout
-        android:paddingTop="15dp"
-        android:gravity="center"
-        android:layout_width="240dp"
-        android:layout_height="wrap_content">
-        <TextView
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:gravity="center_vertical"
-            android:text="@string/display_name"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
-        <TextView
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:id="@+id/display"
-            android:gravity="center_vertical"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"/>
     </LinearLayout>
-    <Button
-        android:id="@+id/reset"
-        android:text="@string/reset_name"
-        android:textSize="25sp"
-        android:backgroundTint="#f5f5f5"
-        android:textColor="@color/black"
-        android:layout_width="150dp"
-        android:layout_marginTop="20dp"
-        android:layout_height="60dp"/>
-    <Button
-        android:id="@+id/record"
-        android:text="@string/record_name"
-        android:textSize="25sp"
-        android:layout_width="150dp"
-        android:layout_marginTop="20dp"
-        android:layout_height="60dp"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/chart"
+            android:layout_width="match_parent"
+            android:layout_height="300dp" />
+        <LinearLayout
+            android:id="@+id/button_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="50dp"
+            android:layout_marginTop="5dp"
+            android:alpha="0.5"
+            android:gravity="center_horizontal">
+            <ImageButton
+                android:id="@+id/reset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/resetDescription"
+                android:src="@drawable/ic_baseline_refresh_24"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <ImageButton
+                android:id="@+id/record"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/design_default_color_primary"
+                android:contentDescription="@string/recordDescription"
+                android:src="@drawable/ic_baseline_play_arrow_24"
+                tools:ignore="TouchTargetSizeCheck" />
+        </LinearLayout>
+    </FrameLayout>
 </LinearLayout>
