--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,14 +2,15 @@
     <!-- 示波器参数 -->
     <style name="record_params">
         <item name="android:gravity">center_vertical</item>
-        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
     <style name="record_params.label">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textStyle">bold</item>
     </style>
     <style name="setting">
-
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
 
